# python-slack-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md
agents/docs-assistant/: config.yaml  system_prompt.txt
agents/hello-world/: config.yaml  system_prompt.txt
agents/kitchen-sink/: config.yaml  system_prompt.txt
docs/: access-control.md  agents.md  canvas.md  cli.md  deployment.md  llm.md  observability.md  private-repo.md  setup.md  slack-app-manifest.json  storage.md  tools.md  user-context.md
src/slack_agents/: Dockerfile  __init__.py  agent_loop.py  config.py  conversations.py  files.py  main.py  observability.py
src/slack_agents/access/: allow_all.py  allow_list.py  base.py
src/slack_agents/cli/: __init__.py  build_docker.py  export_conversations.py  export_conversations_html.py  export_usage.py  export_usage_csv.py  healthcheck.py  init.py  run.py
src/slack_agents/llm/: __init__.py  anthropic.py  base.py  openai.py
src/slack_agents/scripts/: download_fonts.py  generate_llms_full.py
src/slack_agents/slack/: actions.py  agent.py  canvas_auth.py  canvases.py  files.py  format.py  streaming.py  streaming_formatter.py  tool_blocks.py
src/slack_agents/storage/: base.py  postgres.py  postgres.sql  sqlite.py  sqlite.sql
src/slack_agents/tools/: base.py  canvas.py  canvas_importer.py  file_exporter.py  file_importer.py  mcp_http.py  user_context.py
tests/: test_access.py  test_agent_loop.py  test_canvas_auth.py  test_canvas_importer.py  test_cli.py  test_config.py  test_conversations.py  test_cost.py  test_export_documents.py  test_export_usage.py  test_file_extractors.py  test_format.py  test_init.py  test_llm_factory.py  test_mcp_client.py  test_openai_convert.py  test_overlay_integration.py  test_tool_blocks.py
